--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,6 @@ springVersion=5.3.18
 jupiterVersion=5.8.1
 archUnitVersion=0.23.1
 mapstructVersion=1.4.2.Final
+lombokVersion=1.18.30
+aspectjVersion=1.9.7
+aspectjWeaverVersion=1.9.7
